# conan-cmake-example

./: README.md
child/: CMakeLists.txt  conanfile.py
child/src/: child.cpp  child.h
child/test_package/: CMakeLists.txt  conanfile.py  hello.cpp
parent/: CMakeLists.txt  conanfile.py
parent/src/: parent.cpp
